syntax = "proto3";
package rpcTest;

message ReqParam{
    int32 A = 1;
    int32 B = 2;
}

message RespResult{
    int32 Sum = 1;
    int32 Sub = 2;
}

service RPCFunction{
    rpc Call(ReqParam) returns (RespResult);
}